Added support for WildFly 8