@@ -28,6 +28,23 @@
       <type>war</type>
     </dependency>
 
+    <!-- The WildFly 8 version of APIMan -->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>apiman-dt-api-war-wildfly8</artifactId>
+      <type>war</type>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>apiman-dt-ui-war-wildfly8</artifactId>
+      <type>war</type>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>apiman-rt-gateway-war-wildfly8</artifactId>
+      <type>war</type>
+    </dependency>
+
     <!-- The Jetty 8 version of APIMan -->
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -75,7 +92,6 @@
   </dependencies>
 
   <profiles>
-    
     <!-- Run on EAP 6.3 - must have EAP 6.3 ZIP file locally at the root of apiman-tool-dev-server-all -->
     <profile>
       <id>run-all-eap6</id>
@@ -191,6 +207,133 @@
                       <arg value="${apiman.eap.home}/modules" />
                       <arg value="-jaxpmodule" />
                       <arg value="javax.xml.jaxp-provider" />
+                      <arg value="org.jboss.as.standalone" />
+                    </java>
+                  </tasks>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    
+    <!-- Run on WildFly 8.1 -->
+    <profile>
+      <id>run-all-wildfly8</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.7</version>
+            <dependencies>
+              <dependency>
+                <groupId>org.apache.ant</groupId>
+                <artifactId>ant</artifactId>
+                <version>1.8.2</version>
+              </dependency>
+            </dependencies>
+            <executions>
+              <execution>
+                <id>run-wildfly8</id>
+                <phase>install</phase>
+                <configuration>
+                  <tasks>
+                    <antversion property="antversion" />
+                    <echo>Ant Version: ${antversion}</echo>
+                    
+                    <property name="appserver.id" value="wildfly8" />
+                    <property name="apiman.wildfly.download.url" value="http://download.jboss.org/wildfly/8.1.0.Final/wildfly-8.1.0.Final.zip" />
+                    <property name="apiman.tempdir" value="${project.build.directory}/_tmp" />
+                    <property name="apiman.install.dir" value="${project.build.directory}" />
+                    <property name="apiman.appserver.dir" location="${apiman.install.dir}/wildfly-8.1.0.Final" />
+                    <property name="apiman.wildfly.zip" location="${basedir}/wildfly-8.1.0.Final.zip" />
+                    <property name="apiman.apiman-dt-api-war-wildfly8.war"
+                      value="${maven.dependency.org.overlord.apiman.apiman-dt-api-war-wildfly8.war.path}" />
+                    <property name="apiman.apiman-dt-ui-war-wildfly8.war"
+                      value="${maven.dependency.org.overlord.apiman.apiman-dt-ui-war-wildfly8.war.path}" />
+                    <property name="apiman.apiman-tools-dev-seeder.war"
+                      value="${maven.dependency.org.overlord.apiman.apiman-tools-dev-seeder.war.path}" />
+                    <property name="apiman.apiman-tools-dev-services.war"
+                      value="${maven.dependency.org.overlord.apiman.apiman-tools-dev-services.war.path}" />
+                    <property name="apiman.apiman-rt-gateway-war-wildfly8.war"
+                      value="${maven.dependency.org.overlord.apiman.apiman-rt-gateway-war-wildfly8.war.path}" />
+                    <property name="apiman.wildfly.home" location="${apiman.appserver.dir}" />
+                    <property name="apiman.wildfly.webapps" location="${apiman.appserver.dir}/standalone/deployments" />
+                    <property name="apiman.resources.dir" location="${basedir}/src/main/resources" />
+                    
+                    <echo></echo>
+                    <echo>********************************************************************</echo>
+                    <echo>APIMan DT:         ${apiman.apiman-dt-api-war-wildfly8.war}</echo>
+                    <echo>APIMan DT UI:      ${apiman.apiman-dt-ui-war-wildfly8.war}</echo>
+                    <echo>APIMan Gateway:    ${apiman.apiman-rt-gateway-war-wildfly8.war}</echo>
+                    <echo>Dev Seeder:        ${apiman.apiman-tools-dev-seeder.war}</echo>
+                    <echo>Dev Services:      ${apiman.apiman-tools-dev-services.war}</echo>
+                    <echo>-------</echo>
+                    <echo>EAP Home:          ${apiman.wildfly.home}</echo>
+                    <echo>********************************************************************</echo>
+                    <echo></echo>
+                    
+                    <mkdir dir="${apiman.tempdir}" />
+                    
+                    <!-- Download and unpack WildFly 8.1 -->
+                    <get src="${apiman.wildfly.download.url}" dest="${apiman.wildfly.zip}" usetimestamp="true" />
+                    <unzip src="${apiman.wildfly.zip}" dest="${apiman.install.dir}" overwrite="false" />
+                    
+                    <!-- Configure APIMan -->
+                    <property name="apiman.config.file" location="${apiman.wildfly.home}/standalone/configuration/apiman.properties" />
+                    <propertyfile file="${apiman.config.file}" comment=" Configuration information for Overlord API Management">
+                      <entry key="apiman-dt-ui.dt-api.authentication.type" value="samlBearerToken" />
+                      <entry key="apiman-dt-ui.dt-api.authentication.token.generator" value="org.overlord.apiman.dt.ui.wildfly8.auth.ApiManDtUiTokenGenerator" />
+                      <entry key="apiman-dt-ui.gateway.base-url" value="http://localhost:8080/apiman-rt/gateway/" />
+                      <entry key="apiman-dt-api.gateway.rest-endpoint" value="http://localhost:8080/apiman-rt" />
+                      <entry key="apiman-dt-api.gateway.authentication.basic.user" value="admin" />
+                      <entry key="apiman-dt-api.gateway.authentication.basic.password" value="admin123!" />
+
+                      <entry key="apiman-rt.registry" value="org.overlord.apiman.rt.engine.impl.InMemoryRegistry" />
+                      <entry key="apiman-rt.connector-factory" value="org.overlord.apiman.rt.war.connectors.HttpConnectorFactory" />
+                      <entry key="apiman-rt.policy-factory" value="org.overlord.apiman.rt.engine.policy.PolicyFactoryImpl" />
+                      <entry key="apiman-rt.components.ISharedStateComponent" value="org.overlord.apiman.rt.engine.impl.InMemorySharedStateComponent" />
+                      <entry key="apiman-rt.components.IPolicyFailureFactoryComponent" value="org.overlord.apiman.rt.war.WarPolicyFailureFactoryComponent" />
+                    </propertyfile>
+                    <property name="apiman.uiheader.config.src" value="${apiman.resources.dir}/config/header" />
+                    <property name="apiman.uiheader.config.dest" value="${apiman.wildfly.home}/standalone/configuration/overlord-apps" />
+                    <mkdir dir="${apiman.uiheader.config.dest}" />
+                    <copy todir="${apiman.uiheader.config.dest}">
+                      <fileset dir="${apiman.uiheader.config.src}" />
+                    </copy>
+                    
+                    <!-- Deploy apiman to WildFly 8 -->
+                    <copy file="${apiman.resources.dir}/wildfly8/deployments/apiman-ds.xml" todir="${apiman.wildfly.webapps}" overwrite="true" />
+                    <copy file="${apiman.resources.dir}/wildfly8/configuration/application-users.properties" todir="${apiman.wildfly.home}/standalone/configuration" overwrite="true" />
+                    <copy file="${apiman.resources.dir}/wildfly8/configuration/application-roles.properties" todir="${apiman.wildfly.home}/standalone/configuration" overwrite="true" />
+                    <copy file="${apiman.resources.dir}/wildfly8/configuration/standalone.xml" todir="${apiman.wildfly.home}/standalone/configuration" overwrite="true" />
+                    <copy file="${apiman.apiman-dt-api-war-wildfly8.war}" tofile="${apiman.wildfly.webapps}/apiman-dt-api.war" overwrite="true" />
+                    <copy file="${apiman.apiman-dt-ui-war-wildfly8.war}" tofile="${apiman.wildfly.webapps}/apiman-dt-ui.war" overwrite="true" />
+                    <copy file="${apiman.apiman-tools-dev-seeder.war}" tofile="${apiman.wildfly.webapps}/dev-seeder.war" overwrite="true" />
+                    <copy file="${apiman.apiman-tools-dev-services.war}" tofile="${apiman.wildfly.webapps}/services.war" overwrite="true" />
+                    <copy file="${apiman.apiman-rt-gateway-war-wildfly8.war}" tofile="${apiman.wildfly.webapps}/apiman-rt.war" overwrite="true" />
+                    
+                    <!-- Start WildFly 8 -->
+                    <makeurl property="apiman.wildfly.logconfig.url" file="${apiman.wildfly.home}/standalone/configuration/logging.properties" />
+                    <java jar="${apiman.wildfly.home}/jboss-modules.jar" fork="true" failonerror="true" dir="${apiman.wildfly.home}">
+                      <!-- Set WildFly startup system properties -->
+                      <sysproperty key="java.io.tmpdir" value="${apiman.tempdir}" />
+                      <sysproperty key="java.net.preferIPv4Stack" value="true" />
+                      <sysproperty key="jboss.modules.system.pkgs" value="org.jboss.byteman" />
+                      <sysproperty key="java.awt.headless" value="true" />
+                      <sysproperty key="org.jboss.boot.log.file" value="${apiman.wildfly.home}/standalone/log/server.log" />
+                      <sysproperty key="logging.configuration" value="${apiman.wildfly.logconfig.url}" />
+                      <sysproperty key="jboss.home.dir" value="${apiman.wildfly.home}" />
+                      <sysproperty key="jboss.server.base.dir" value="${apiman.wildfly.home}/standalone" />
+
+                      <jvmarg line="-D&quot;[Standalone]&quot; -server -Xms256m -Xmx1024m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8787" />
+                      <arg value="-mp" />
+                      <arg value="${apiman.wildfly.home}/modules" />
                       <arg value="org.jboss.as.standalone" />
                     </java>
                   </tasks>
